--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -1,27 +1,107 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1xv-IR-E4M">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Products View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Products-->
+        <scene sceneID="KR8-Xp-EJs">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ProductsViewController" customModule="ProductCatalog" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <collectionViewController id="JIp-AI-YDs" customClass="ProductsViewController" customModule="ProductCatalog" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="3FB-Np-aQA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aU1-Fw-oxz">
+                            <size key="itemSize" width="120" height="140"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Nyi-Fe-cEE" customClass="ProductCollectionViewCell" customModule="ProductCatalog" customModuleProvider="target">
+                                <rect key="frame" x="5" y="0.0" width="120" height="140"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mZi-Zm-abe">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="70" id="1O3-Jy-JxO"/>
+                                                <constraint firstAttribute="height" constant="70" id="aTt-va-0yN"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-MB-Ndd">
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-VJ-hyk">
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TUG-5Z-AbK">
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="Ogh-MB-Ndd" firstAttribute="top" secondItem="mZi-Zm-abe" secondAttribute="bottom" constant="2" id="2yc-QU-bFV"/>
+                                    <constraint firstItem="mZi-Zm-abe" firstAttribute="centerX" secondItem="Nyi-Fe-cEE" secondAttribute="centerX" id="599-EU-EG7"/>
+                                    <constraint firstAttribute="trailing" secondItem="TUG-5Z-AbK" secondAttribute="trailing" constant="39" id="HW5-5f-i8a"/>
+                                    <constraint firstItem="j0o-VJ-hyk" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" constant="31" id="Htw-tV-cQU"/>
+                                    <constraint firstItem="mZi-Zm-abe" firstAttribute="top" secondItem="Nyi-Fe-cEE" secondAttribute="topMargin" id="KFg-PO-Cgv"/>
+                                    <constraint firstItem="TUG-5Z-AbK" firstAttribute="top" secondItem="j0o-VJ-hyk" secondAttribute="bottom" constant="2.5" id="Ptz-qv-iHb"/>
+                                    <constraint firstItem="TUG-5Z-AbK" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leading" constant="39" id="ZFe-PV-hGO"/>
+                                    <constraint firstItem="Ogh-MB-Ndd" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" constant="31" id="cOR-6b-tjG"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="j0o-VJ-hyk" secondAttribute="trailing" constant="31" id="fgi-Xc-D7R"/>
+                                    <constraint firstItem="j0o-VJ-hyk" firstAttribute="top" secondItem="Ogh-MB-Ndd" secondAttribute="bottom" id="kru-9l-XzT"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Ogh-MB-Ndd" secondAttribute="trailing" constant="31" id="wVz-OS-08F"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="brandLabel" destination="j0o-VJ-hyk" id="1UW-oU-obV"/>
+                                    <outlet property="nameLabel" destination="Ogh-MB-Ndd" id="iCM-u5-xfU"/>
+                                    <outlet property="priceLabel" destination="TUG-5Z-AbK" id="Qmy-2h-bin"/>
+                                    <outlet property="productImage" destination="mZi-Zm-abe" id="SnM-G0-lpa"/>
+                                    <outlet property="productImageView" destination="mZi-Zm-abe" id="LRY-8f-mgr"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="JIp-AI-YDs" id="XZt-Hd-SbB"/>
+                            <outlet property="delegate" destination="JIp-AI-YDs" id="XFj-Zx-yfp"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Products" id="apG-bB-4UH"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0dk-Ze-oN5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="847.20000000000005" y="22.938530734632685"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="E8Q-Wm-2da">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1xv-IR-E4M" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cbD-53-rSK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JIp-AI-YDs" kind="relationship" relationship="rootViewController" id="7pz-Aq-Afq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QEE-Uz-n6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-92" y="22.938530734632685"/>
         </scene>
     </scenes>
 </document>
