--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -16,28 +16,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aU1-Fw-oxz">
-                            <size key="itemSize" width="120" height="140"/>
+                            <size key="itemSize" width="140" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Nyi-Fe-cEE" customClass="ProductCell" customModule="ProductCatalog" customModuleProvider="target">
-                                <rect key="frame" x="5" y="0.0" width="120" height="140"/>
+                                <rect key="frame" x="5" y="0.0" width="140" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="140" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mZi-Zm-abe">
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="70" id="1O3-Jy-JxO"/>
-                                                <constraint firstAttribute="height" constant="70" id="aTt-va-0yN"/>
+                                                <constraint firstAttribute="width" constant="80" id="1O3-Jy-JxO"/>
+                                                <constraint firstAttribute="height" constant="80" id="aTt-va-0yN"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-MB-Ndd">
-                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="11"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -57,30 +57,28 @@
                                 <constraints>
                                     <constraint firstItem="Ogh-MB-Ndd" firstAttribute="top" secondItem="mZi-Zm-abe" secondAttribute="bottom" constant="2" id="2yc-QU-bFV"/>
                                     <constraint firstItem="mZi-Zm-abe" firstAttribute="centerX" secondItem="Nyi-Fe-cEE" secondAttribute="centerX" id="599-EU-EG7"/>
-                                    <constraint firstAttribute="trailing" secondItem="TUG-5Z-AbK" secondAttribute="trailing" constant="39" id="HW5-5f-i8a"/>
-                                    <constraint firstItem="j0o-VJ-hyk" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" constant="31" id="Htw-tV-cQU"/>
-                                    <constraint firstItem="Cz8-ev-an8" firstAttribute="top" secondItem="mZi-Zm-abe" secondAttribute="bottom" constant="-44" id="ITH-n1-6eU"/>
+                                    <constraint firstAttribute="trailing" secondItem="TUG-5Z-AbK" secondAttribute="trailing" id="HW5-5f-i8a"/>
+                                    <constraint firstItem="j0o-VJ-hyk" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" id="Htw-tV-cQU"/>
                                     <constraint firstItem="mZi-Zm-abe" firstAttribute="top" secondItem="Nyi-Fe-cEE" secondAttribute="topMargin" id="KFg-PO-Cgv"/>
                                     <constraint firstItem="TUG-5Z-AbK" firstAttribute="top" secondItem="j0o-VJ-hyk" secondAttribute="bottom" constant="2.5" id="Ptz-qv-iHb"/>
-                                    <constraint firstItem="Cz8-ev-an8" firstAttribute="leading" secondItem="mZi-Zm-abe" secondAttribute="trailing" constant="-45" id="Vzk-SO-5gV"/>
-                                    <constraint firstItem="TUG-5Z-AbK" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leading" constant="39" id="ZFe-PV-hGO"/>
-                                    <constraint firstItem="Ogh-MB-Ndd" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" constant="31" id="cOR-6b-tjG"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="j0o-VJ-hyk" secondAttribute="trailing" constant="31" id="fgi-Xc-D7R"/>
+                                    <constraint firstItem="TUG-5Z-AbK" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leading" id="ZFe-PV-hGO"/>
+                                    <constraint firstItem="Ogh-MB-Ndd" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" id="cOR-6b-tjG"/>
+                                    <constraint firstItem="Cz8-ev-an8" firstAttribute="top" secondItem="mZi-Zm-abe" secondAttribute="bottom" constant="-48" id="fXF-7I-aca"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="j0o-VJ-hyk" secondAttribute="trailing" id="fgi-Xc-D7R"/>
                                     <constraint firstItem="j0o-VJ-hyk" firstAttribute="top" secondItem="Ogh-MB-Ndd" secondAttribute="bottom" id="kru-9l-XzT"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="Ogh-MB-Ndd" secondAttribute="trailing" constant="31" id="wVz-OS-08F"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Ogh-MB-Ndd" secondAttribute="trailing" id="wVz-OS-08F"/>
+                                    <constraint firstItem="Cz8-ev-an8" firstAttribute="leading" secondItem="mZi-Zm-abe" secondAttribute="trailing" constant="-50" id="yLC-9v-TFr"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="brandLabel" destination="j0o-VJ-hyk" id="1UW-oU-obV"/>
                                     <outlet property="nameLabel" destination="Ogh-MB-Ndd" id="iCM-u5-xfU"/>
                                     <outlet property="priceLabel" destination="TUG-5Z-AbK" id="Qmy-2h-bin"/>
-                                    <outlet property="productImage" destination="mZi-Zm-abe" id="SnM-G0-lpa"/>
                                     <outlet property="productImageView" destination="mZi-Zm-abe" id="LRY-8f-mgr"/>
                                     <outlet property="spinner" destination="Cz8-ev-an8" id="eSX-sZ-FXM"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
-                            <outlet property="dataSource" destination="JIp-AI-YDs" id="XZt-Hd-SbB"/>
                             <outlet property="delegate" destination="JIp-AI-YDs" id="XFj-Zx-yfp"/>
                         </connections>
                     </collectionView>
