--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -36,18 +36,18 @@
                                                 <constraint firstAttribute="height" constant="80" id="aTt-va-0yN"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-MB-Ndd">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-MB-Ndd">
                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="11"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-VJ-hyk">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-VJ-hyk">
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TUG-5Z-AbK">
-                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="13"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -60,7 +60,7 @@
                                     <constraint firstAttribute="trailing" secondItem="TUG-5Z-AbK" secondAttribute="trailing" id="HW5-5f-i8a"/>
                                     <constraint firstItem="j0o-VJ-hyk" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" id="Htw-tV-cQU"/>
                                     <constraint firstItem="mZi-Zm-abe" firstAttribute="top" secondItem="Nyi-Fe-cEE" secondAttribute="topMargin" id="KFg-PO-Cgv"/>
-                                    <constraint firstItem="TUG-5Z-AbK" firstAttribute="top" secondItem="j0o-VJ-hyk" secondAttribute="bottom" constant="2.5" id="Ptz-qv-iHb"/>
+                                    <constraint firstItem="TUG-5Z-AbK" firstAttribute="top" secondItem="j0o-VJ-hyk" secondAttribute="bottom" constant="2" id="Ptz-qv-iHb"/>
                                     <constraint firstItem="TUG-5Z-AbK" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leading" id="ZFe-PV-hGO"/>
                                     <constraint firstItem="Ogh-MB-Ndd" firstAttribute="leading" secondItem="Nyi-Fe-cEE" secondAttribute="leadingMargin" id="cOR-6b-tjG"/>
                                     <constraint firstItem="Cz8-ev-an8" firstAttribute="top" secondItem="mZi-Zm-abe" secondAttribute="bottom" constant="-48" id="fXF-7I-aca"/>
