--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -16,17 +16,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aU1-Fw-oxz">
-                            <size key="itemSize" width="140" height="150"/>
+                            <size key="itemSize" width="140" height="161"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Nyi-Fe-cEE" customClass="ProductCell" customModule="ProductCatalog" customModuleProvider="target">
-                                <rect key="frame" x="5" y="0.0" width="140" height="150"/>
+                                <rect key="frame" x="5" y="0.0" width="140" height="161"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="140" height="150"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="140" height="161"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mZi-Zm-abe">
@@ -69,6 +69,11 @@
                                     <constraint firstAttribute="trailingMargin" secondItem="Ogh-MB-Ndd" secondAttribute="trailing" id="wVz-OS-08F"/>
                                     <constraint firstItem="Cz8-ev-an8" firstAttribute="leading" secondItem="mZi-Zm-abe" secondAttribute="trailing" constant="-50" id="yLC-9v-TFr"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="brandLabel" destination="j0o-VJ-hyk" id="1UW-oU-obV"/>
                                     <outlet property="nameLabel" destination="Ogh-MB-Ndd" id="iCM-u5-xfU"/>
