--- a/ProductCatalog/Base.lproj/Main.storyboard
+++ b/ProductCatalog/Base.lproj/Main.storyboard
@@ -21,6 +21,11 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
                         </collectionViewFlowLayout>
+                        <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" id="hPL-ZB-VEg">
+                            <rect key="frame" x="169" y="251" width="37" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="color" red="1" green="0.87058823529999996" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Nyi-Fe-cEE" customClass="ProductCell" customModule="ProductCatalog" customModuleProvider="target">
                                 <rect key="frame" x="5" y="78" width="170" height="160"/>
@@ -127,6 +132,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="clearButton" destination="Dec-5I-qYs" id="ZoN-cx-qJh"/>
+                        <outlet property="spinner" destination="hPL-ZB-VEg" id="mOz-Gh-gyL"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0dk-Ze-oN5" userLabel="First Responder" sceneMemberID="firstResponder"/>
